data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_370.wast
;; 1. **Loop Instruction with Unreachable After Invalid Branch**:    - Create a loop containing a branch instruction (`br 0`) that erroneously attempts to branch beyond the loop. Follow this by an `unreachable` instruction.    - **Constraint**: Ensures correct handling of branch targets within loops.    - **Relation to Unreachable Code Execution**: Incorrect branching should not lead to the `unreachable` instruction being executed.

(assert_invalid
  (module
    (func
      (loop
        (br 1)
      )
      (unreachable)
    )
  )
  "invalid branch"
)